Finished English/French localization

--- a/Northwind.Mvc/Views/Home/Index.cshtml
+++ b/Northwind.Mvc/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@model IEnumerable<Order>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@model IEnumerable<Order>
+@inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Orders";
+    ViewData["Title"] = Localizer["Orders"];
 }
 
 <div class="text-center">
@@ -8,12 +10,12 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>Order Id</th>
-                <th>Order Date</th>
-                <th>Company Name</th>
-                <th>Country</th>
-                <th>Item Count</th>
-                <th>Order Total</th>
+                <th>@Localizer["Order Id"]</th>
+                <th>@Localizer["Order Date"]</th>
+                 <th>@Localizer["Company Name"]</th>
+                 <th>@Localizer["Country"]</th>
+                 <th>@Localizer["Item Count"]</th>
+                <th>@Localizer["Order Total"]</th>
             </tr>
         </thead>
         <tbody>
