--- a/Northwind.Mvc/Views/Home/Shipper.cshtml
+++ b/Northwind.Mvc/Views/Home/Shipper.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Shippers";
 }
 <h1>@ViewData["Title"]</h1>
+<h2>Without Form Tag Helper</h2>
 <div>
     <div class="mb-3">
         <label for="shipperIdInput" class="form-label">Shipper ID</label>
@@ -14,6 +15,27 @@
     </div>
     <div class="mb-3">
         <label for="phoneInput" class="form-label">Phone</label>
-        <input class="form-control" id="phoneInput" value="@Model.Phone"? />
+        <input class="form-control" id="phoneInput" value="@Model.Phone" ? />
     </div>
 </div>
+
+<h2>With Form Tag Helper</h2>
+<form asp-controller="Home" asp-action="ProcessShipper" class="form-horizontal" role="form">
+    <div>
+        <div class="mb-3">
+            <label asp-for="ShipperId" class="form-label"/>
+            <input asp-for="ShipperId" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <label asp-for="CompanyName" class="form-label"/>
+            <input asp-for="CompanyName" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <label asp-for="Phone" class="form-label" />
+            <input asp-for="Phone" class="form-control" />
+        </div>
+        <div class="mb-3">
+            <input type="submit" class="form-control"/>
+        </div>
+    </div>
+</form>
